webconfig/css/config.css
/* ... */
.fingeringRadio [type=radio]:not(old) + label > span {
	display: none;
}

.fingeringRadio input[type=radio]:not(old):checked + label {
	z-index: 7;
	background: var(--main-bg-color);
	border-bottom: 2px solid var(--main-bg-color);
	height: 40px;
	color: var(--text-color);
	-webkit-box-shadow: 0px -4px 13px rgba(30, 30, 30, 1);
	-moz-box-shadow: 0px -4px 13px rgba(30, 30, 30, 1);
	box-shadow: 0px -4px 13px rgba(30, 30, 30, 1);
}

.tabBorder {
	position: absolute;
	top: 216px;
	left: 0px;
	height: 20px;
	width: 1024px;
	border-bottom: none;
	-webkit-box-shadow: 0px -4px 13px rgba(30, 30, 30, 1);
	-moz-box-shadow: 0px -4px 13px rgba(30, 30, 30, 1);
	box-shadow: 0px -4px 13px rgba(30, 30, 30, 1);
	z-index: 6;
	border-radius: 25px 25px 0px 0px;
}

.tabBorder1 {
	position: absolute;
	top: 216px;
	left: 0px;
	height: 25px;
	width: 1024px;
	background: var(--main-bg-color);
	z-index: 8;
	border-radius: 25px 25px 0px 0px;
}

#topcontrolbox {
	position: relative;
	background-color: var(--main-bg-color);
	padding-bottom: 70px;
	margin-bottom: 30px;
	display: block;
	clear: both;
	height: 1855px;
	height: 2320px;
	border-radius: 5px;
}

.controlbox {
	position: relative;
	background-color: var(--main-bg-color);
	padding-bottom: 30px;
	display: block;
	clear: both;
	height: 275px;
	border-radius: 5px;
}


.WARBL2controlbox {
	margin-top: 30px;
	position: relative;
	background-color: var(--main-bg-color);
	padding-bottom: 30px;
	display: block;
	clear: both;
	height: 275px;
	border-radius: 5px;
}
.controlbox2 {
	position: absolute;
	background-color: var(--main-bg-color);
	padding-bottom: 50px;
	margin-bottom: 50px;
	display: block;
	left: 30px;
	//height: 360px;
	height: 430px;
	width: 960px;
	border: solid 2px var(--box-border-color);
	border-radius: 5px;
	z-index: 99;
	-webkit-box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.75);
	-moz-box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.75);
	box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.75);
}

.WARBL2Elements {
	//display: none;
}

.middleControlBox {
	position: absolute;
	top: 25px;
	background-color: var(--main-bg-color);
	display: block;
	clear: both;
	border-radius: 5px;
}

.smallcontrolbox {
	background-color: var(--main-bg-color);
	padding-top: 0px;
	padding-bottom: 50px;
	width: 463px;
	height: 375px;
	float: right;
	position: absolute;
	top: 440px;
	border-radius: 5px;
	border: solid 2px var(--box-border-color);
	border-radius: 5px;
	-webkit-box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.75);
	-moz-box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.75);
	box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.75);
}

.thirdRowControlbox {
	background-color: var(--main-bg-color);
	padding-top: 0px;
	padding-bottom: 50px;
	width: 463px;
	height: 375px;
	float: right;
	position: absolute;
	top: 1390px;
	border-radius: 5px;
	border: solid 2px var(--box-border-color);
	border-radius: 5px;
	-webkit-box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.75);
	-moz-box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.75);
	box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.75);
}

#buttonBox{
	//top: 1390px;
	top: 1850px;
}

#box1 {
	left: 527px;
}

#box2 {
	left: 527px;
	display: none;
}

#box3 {
	left: 527px;
	//top: 900px;
	top: 1390px;
	//height: 405px;
	height: 375px;
}

#box6 {
	left: 30px;
	top: 900px;
	height: 405px;
	display: none;
    background: #440000;
}

#box7 {
	height: 405px;
}

#box8 {
	height: 405px;
}

#box9 {
	display: none;
	left: 30px;
	top: 900px;
	height: 405px;
}

#box10 {
	left: 527px;
	top: 900px;
	height: 405px;
	display: block;
	z-index:999;
}

#box11 {
	left: 527px;
	top: 900px;
	height: 405px;
	display: none;
}

#box12 {
	left: 527px;
	top: 900px;
	height: 405px;
	display: none;
}

#pressuregraph {
	display: none;
	left: 527px;
}

.controlboxtitle {
	height: 70px;
	color: var(--header-text-color);
	padding-top: 0px;
	margin-top: 0px;
	line-height: 70px;
	border-radius: 5px 5px 0px 0px;
	background: var(--main-bg-color);
	border-radius: 5px 5px 0px 0px;
}

.infocircle {
	position: relative;
	top: 7px;
	background: transparent;
	border: none;
	padding: 5px;
	cursor: pointer;
	z-index:100;
}

.info {
	position: relative;
	pointer-events: none;
	top: -4px;
}

#volumeOn {
	display: none;
}
	

.infocircle:focus {
	outline: none;
}

.button:hover {
}

.button:active {
	transform: translateY(2px);
}

.button:focus {
	outline: none;
}


.button {
	position: absolute;
	display: block;
	width: 36px;
	height: 36px;
	padding: 0px 0px;
	text-align: center;
	text-decoration: none;
	color: var(--primary-color);
	font-size: 36px;
	cursor: pointer;
	border: none;
	background-color: var(--main-bg-color);
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
	z-index: 99;
}


.sensorvalue {
	position: absolute;
	display: block;
	top: 248px;
	width: 36px;
	padding: 0px 0px;
	text-decoration: none;
	margin-top: -15px;
	color: var(--text-color);
}

.sensorValueEnabled {
	color: var(--text-color) !important;
}

#v1 {
	color: var(--text-color);
}

.toprowbuttons {
	top: 190px;
}

.bottomrowbuttons {
	top: 250px;
}

.b1 {
	left: 311px;
}

.b2 {
	left: 376px;
}

.b3 {
	left: 441px;
}

.b4 {
	left: 506px;
}

.b5 {
	left: 571px;
}

.b6 {
	left: 636px;
}

.b7 {
	left: 701px;
}

.b8 {
	left: 766px;
}

.b9 {
	left: 870px;
}

.smallbutton {
	width: 120px;
	height: 50px;
	text-align: center;
	text-decoration: none;
	font-size: 14px;
	cursor: pointer;
	border: none;
	border-radius: 5px;
	background-color: var(--primary-color);
	color: var(--button-text-color);
}

.smallbutton:disabled {
	background-color: var(--disabled-bg-color);
		cursor: default;
	color: #555;
}

.headerbuttons:disabled {
	background-color: var(--disabled-bg-color);
	cursor: default;
	color: #555;
}

.okay {
	float: left;
	margin-top: 40px;
	margin-left: 80px;
	border: 2px solid black;
}

.cancel {
	float: right;
	margin-top: 40px;
	margin-right: 80px;
	background: none;
	border: 2px solid var(--cancel-color);
	color: var(--cancel-color);
}

.smallbutton:active {
	transform: translateY(2px);
}

.smallbutton:focus {
	outline: none;
}
/* ... */

